--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-image: url(./images/space.png);
+  background-size: cover;
+  /* background-repeat: no-repeat; */
 }
