Got top part kind of working

--- a/public/screen.css
+++ b/public/screen.css
@@ -11,5 +11,42 @@ body {
   min-height: 100%;
   background-image: url(./images/space.png);
   background-size: cover;
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
+  display: flex;
 }
+
+/* TOP PART */
+
+/* IMG  SECTION*/
+.img-container {
+  margin-top: 11.3rem;
+  margin-left: 9.4rem;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+}
+/* END OF IMG */
+
+
+/* TEXT BOX SECTION */
+.text-box-bg {
+  background-color: #D0D4D6;
+  opacity: 0.9;
+}
+
+.textbox {
+  width: 52%;
+  margin-top: 9.5 rem;
+  margin-left: 1.5rem;
+  margin-bottom: 21rem;
+  padding-left: 1rem;
+  border-radius: 7px;
+}
+
+/* END OF TEXT BOX SECTION */
+
+
+/* END OF TOP PART */
