--- a/public/screen.css
+++ b/public/screen.css
@@ -15,38 +15,83 @@ body {
   display: flex;
 }
 
-/* TOP PART */
+/* START HEADER */
 
-/* IMG  SECTION*/
-.img-container {
-  margin-top: 11.3rem;
-  margin-left: 9.4rem;
+.header-container {
+  margin-left: 9.3rem;
+  margin-top: 7.5rem;
+  display: flex;
 }
 
-.img {
-  width: 100%;
-  height: 100%;
+.profile-img {
   border-radius: 7px;
-}
-/* END OF IMG */
-
-
-/* TEXT BOX SECTION */
-.text-box-bg {
-  background-color: #D0D4D6;
-  opacity: 0.9;
+  width: 300px;
+  height: 300px;
+  margin-top: 3rem;
 }
 
-.textbox {
-  width: 52%;
-  margin-top: 9.5 rem;
+.textbox-container {
+  background-color: whitesmoke;
+  opacity: 0.8;
+  width: 750px;
+  height: 130px;
+  border-radius: 5px;
+}
+
+.textbox-position {
+  margin-bottom: 20rem;
   margin-left: 1.5rem;
-  margin-bottom: 21rem;
-  padding-left: 1rem;
-  border-radius: 7px;
 }
 
-/* END OF TEXT BOX SECTION */
+/* END HEADER */
 
+/* START CARDS */
 
-/* END OF TOP PART */
+.black-bar {
+  background-color: rgba(0, 0, 0, 0.541);
+  height: 250px;
+  width: 1315px;
+  margin-top: 600px;
+  margin-left: -1270px;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 620px;
+  margin-left: -1270px;
+  align-items: center;
+  justify-content: center;
+}
+
+.cards {
+  width: 300px;
+  height: 200px;
+  border-radius: 7px;
+  justify-content: space-evenly;
+}
+
+.cards2 {
+  margin-left: 2rem;
+}
+
+.no-bullets {
+  list-style-type: none;
+}
+
+/* END CARDS */
+
+/* START CONTENT */
+
+.content-container {
+  margin-top: 870px;
+  margin-left: -1350px;
+  background-color: #031019;
+  height: 500px;
+  width: 1351px;
+}
+
+/* END CONTENT */
+
+/* START FOOTER */
+/* END FOOTER */
