--- a/public/screen.css
+++ b/public/screen.css
@@ -1,5 +1,6 @@
 :root {
   font: 16px / 1 sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html {
@@ -73,7 +74,7 @@ body {
 .card-container {
   display: flex;
   flex-direction: row;
-  margin-top: 6px;
+  margin-top: 620px;
   margin-left: -1270px;
   align-items: center;
   justify-content: center;
@@ -84,6 +85,8 @@ body {
   height: 200px;
   border-radius: 7px;
   justify-content: space-evenly;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .cards2 {
@@ -102,20 +105,116 @@ body {
   margin-top: 870px;
   margin-left: -1350px;
   background-color: #031019;
-  height: 500px;
-  width: 1351px;
+  height: 1000px;
+  width: 1351px; 
+}
+
+.article-img {
+  height: 70px;
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+}
+
+.article-text {
+  padding: 4px 20px;
+  margin-top: -1rem;
+  font-size: 17.5px;
+}
+
+.keep-reading-button {
+  background-color: #0081D5;
+  margin-left: 68rem;
+  justify-content: center;
+  align-items: center;
+  height: 47px;
+  padding-top: 4px;
+  position: absolute;
+  margin-bottom: 5rem;
+  top: 71rem;
+  color: whitesmoke;
+  font-size: 17px;
+  font-weight: bolder;
+  border-radius: 7px;
+  width: 11rem;
+  cursor: pointer;
+}
+
+.keep-reading-button2 {
+  background-color: #0081D5;
+  margin-left: 68rem;
+  justify-content: center;
+  align-items: center;
+  height: 47px;
+  padding-top: 4px;
+  position: absolute;
+  margin-bottom: 5rem;
+  top: 89.5rem;
+  color: whitesmoke;
+  font-size: 17px;
+  font-weight: bolder;
+  border-radius: 7px;
+  width: 11rem;
+  cursor: pointer;
+}
+
+.article-date {
+  display: inline-flex;
+  font-size: 20px;
+  margin-left: -12px;
 }
 
 .article {
-  border-radius: 5px;
-
+  border-radius: 7px;
+  width: 95%;
+  justify-content: space-around;
+  background-color: whitesmoke;
+  margin-left: 2.2rem;
+  margin-top: 2rem;
+  height: 16.5rem;
 }
 
 .article-header {
   display: inline-flex;
+  padding: 4px 20px;
+  font-size: 30px;
 }
 
 /* END CONTENT */
 
 /* START FOOTER */
+
+.footer-container {
+  margin-top: 97rem;
+  margin-left: -55rem;
+}
+
+.connected-text {
+  font-size: 35px;
+  color: whitesmoke;
+}
+
+.twitter-icon {
+  flex-direction: row;
+  width: 5rem;
+  height: auto; 
+  cursor: pointer;
+}
+
+.twitter-images {
+  margin-left: -2.5rem;
+  margin-top: 3rem;
+}
+
+.footer-bottom-text {
+  color: whitesmoke;
+  margin-left: 2.5rem;
+  margin-top: 5rem;
+}
+
+.pad-left {
+  padding-left: 1rem;
+}
+
 /* END FOOTER */
