--- a/public/screen.css
+++ b/public/screen.css
@@ -83,19 +83,18 @@ body {
   width: 100%;
   height: 15rem;
   top: 38.3rem;
-  right: 0rem;
+  right: -0rem;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  list-style-type: none; 
+  list-style-type: none;
 }
 
 .cards {
   display: inline-flex;
-  opacity: 1;
   width: 18rem;
   height: 12rem;
-  margin-right: 2rem;
+  padding-right: 2rem;
   cursor: pointer;
   border-radius: 7px;
   object-fit: cover;
